--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -2,9 +2,9 @@
 .header-toolbar {
   display: flex;
   align-items: center;
-  background-color: #fdecda; /* Color crema */
-  padding: 15px 20px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Sombra ligera para darle profundidad */
+  background-color: #26262F; /* Color del header */
+  padding: 25px 30px; /* Espaciado mayor para aumentar la altura */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Sombra ligera */
   color: #1d3557;
   font-family: 'Arial', sans-serif;
 }
@@ -16,12 +16,12 @@
 }
 
 .logo {
-  height: 40px; /* Tamaño del logo */
-  margin-right: 10px; /* Espacio entre el logo y el nombre */
+  height: 60px; /* Tamaño del logo aumentado */
+  margin-right: 15px; /* Más espacio entre el logo y el nombre */
 }
 
 .site-name {
-  font-size: 1.4rem;
+  font-size: 1.8rem; /* Aumentar tamaño del texto del nombre */
   font-weight: bold;
   color: #457b9d; /* Color pastel */
 }
@@ -35,10 +35,10 @@
 
 /* Estilos de los botones de navegación */
 .nav-container button {
-  color: #1d3557; /* Color del texto */
+  color: #f1faee; /* Color del texto */
   font-weight: 500;
-  margin: 0 15px; /* Espacio entre botones */
-  font-size: 1rem;
+  margin: 0 20px; /* Espacio entre botones aumentado */
+  font-size: 1.1rem; /* Tamaño del texto más grande */
   text-transform: uppercase; /* Texto en mayúsculas */
   background-color: transparent;
   border: none;
@@ -47,7 +47,7 @@
 
 /* Efecto hover en los botones de navegación */
 .nav-container button:hover {
-  background-color: #f1faee; /* Fondo suave en hover */
+  background-color: #457b9d; /* Fondo pastel en hover */
   border-radius: 5px; /* Bordes redondeados para el efecto hover */
   color: #e63946; /* Color pastel para texto en hover */
 }
@@ -56,11 +56,11 @@
 @media (max-width: 768px) {
   .header-toolbar {
     flex-direction: column;
-    padding: 10px 0;
+    padding: 15px 10px; /* Ajuste para pantallas pequeñas */
   }
 
   .logo-container {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     justify-content: center;
   }
 
@@ -70,7 +70,7 @@
   }
 
   .nav-container button {
-    margin: 5px 0;
+    margin: 8px 0;
     width: 100%; /* Ocupa todo el ancho en dispositivos pequeños */
     text-align: center;
   }
